--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -166,111 +166,231 @@
  TOD_greatpatrioticspeech_desc:1 "Our Great Leader has decided to unite the nation and to put down dissension once and for all by addressing the people. We must arrange for him to be heard by radio in every schoolhouse, church, market, government building, or place of assembly."
  TOD_reckoning:1 "The Reckoning"
  TOD_reckoning_desc:1 "Now is the time to help our great nation understand the love and care that the Great Leader has for Todorovia!"
- MUU_ussr_economic_cooperation:1 "Mu-USSR Economic Pact"
- MUU_ussr_economic_cooperation_desc:1 "By reaching out to our Soviet friends we can ensure the economic and military livelihood of our nation."
- MUU_republicanism:1 "Muror Democratic Leanings"
- MUU_sucks_up:1 "Mu Curries Favor"
- MUU_national_tragedy:1 "A National Tragedy!"
- MUU_national_tragedy_desc:1 "The Girgu Dam was supposed to bring prosperity to our people. Against all plans it has now inundated many towns, destroyed mines, drowned our citizens, and now the people are turning on the government for this project. Geq isn't very happy either about the damage it has caused them."
- MUU_emergency_meeting:1 "Emergency Meeting"
- MUU_emergency_meeting_desc:1 "By letting the people know that we are working to undo the damage done and coming up with a national plan we might be able to avoid the worst of the consequences."
- MUU_emergency_restruct:1 "Emergency Restructuring"
- MUU_emergency_restruct_desc:1 "If we shuffle some government officials around, close some departments, and create new ones we can convince the people that we are doing something."
- MUU_blame_public:1 "Blame the Public"
- MUU_blame_public_desc:1 "The real blame for this tragedy lies with the people themselves. They couldn't have done a worse job planning or executing this important project. The government is blameless in this situation!"
- MUU_government_purges:1 "Government Purges"
- MUU_government_purges_desc:1 "By throwing out of office a number of lower government officials we might be able to pacify the public."
- MUU_mil_corruption:1 "Military Corruption"
- MUU_mil_corruption_desc:1 "Surely the corruption in our military must be rooted out for our nation's stability and wellbeing."
- MUU_mil_corruption_2:1 "Military Corruption 2"
- MUU_mil_corruption_2_desc:1 "Now that we have changed out a fair number of officers we can rest assured that our military is loyal and ready to defend us."
- MUU_scapegoats:1 "Scapegoats"
- MUU_scapegoats_desc:1 "A few minor Houses might be upset at being removed from government, but this is the best way to reassure the people that we are doing something."
- MUU_gov_pogrom:1 "Government Pogrom"
- MUU_gov_pogrom_desc:1 "Anyone directly associated with this disastrous project needs to be cleansed from government. Maybe that will appease the people."
- MUU_gov_pogrom_2:1 "Government Pogrom 2"
- MUU_gov_pogrom_2_desc:1 "The reorganization of government has begun to bear fruit. The people can see how we are working to undo the effects of this disaster."
- MUU_impeach_ollun:1 "Impeach Ollun"
- MUU_impeach_ollun_desc:1 "Ollun's policies have been to blame for everything that has gone wrong in Mu. He must go!"
- MUU_soviet_aid:1 "Seek Soviet Aid"
- MUU_soviet_aid_desc:1 "The Soviets have extended the hand of friendship to us, offering to share technology with us to help us modernize."
- MUU_peoples_voice:1 "Voice of the People"
- MUU_peoples_voice_desc:1 "To survive the perils of this modern age we must give the people an even greater voice in government."
- MUU_upper_house_ref:1 "Upper House Reform"
- MUU_upper_house_ref_desc:1 "The Upper House, scions of our Great Houses, must be made to understand the changes that must occur."
- MUU_upper_house_ref:1 "Upper House Reform"
- MUU_upper_house_ref_desc:1 "The Upper House, scions of our Great Houses, must be made to understand the changes that must occur."
- MUU_lower_house_ref:1 "Lower House Reform"
- MUU_lower_house_ref_desc:1 "The Lower House, representatives elected by the people, will sign off on the changes proposed. They must for us to survive."
- MUU_old_system:1 "The Old System"
- MUU_old_system_desc:1 "By remodeling our democracy to better reflect our old system of government we can reassure the people that we have their best interests at heart."
- MUU_westernization:1 "Westernization"
- MUU_westernization_desc:1 "For years the Western Powers have been trying to influence our government. Perhaps we should allow some of their ideas to influence us."
- MUU_military_engagement:1 "Engage the Military"
- MUU_military_engagement_desc:1 "If we show the Military Houses that we appreciate them we may be able to count on their support in the future."
- MUU_ujjamun_power:1 "Power to the Ujjamun"
- MUU_ujjamun_power_desc:1 "The Ujjamun is the heart of Mu. How can we keep from him the power that is rightfully his?"
- MUU_return_of_empire:1 "Empire of Mu"
- MUU_return_of_empire_desc:1 "The Ujjamun is now on his throne. Once again we can declare the Empire and take back our greatness."
- MUU_force_muror:1 "Force Them Back"
- MUU_force_muror_desc:1 "The Ujjamun has decreed that the rebellious provinces must be brought back into the Empire."
- MUU_muror_alliance:1 "The Muror Alliance"
- MUU_muror_alliance_desc:1 "The Ujjamun recognizes the exigencies of this modern world. We should invite our wayward provinces to voluntarily join us. We can work on their so called independence later."
- MUU_communist_path:1 "Communist Path"
- MUU_communist_path_desc:1 "Our contact with the Soviets has shows the correctness of Communism. We must pursue this course and bring justice to all of our people."
- MUU_nationalist_influences:1 "Nationalist Influences"
- MUU_nationalist_influences_desc:1 "Our greatness is not behind us - No! We shall be great again! We are a great nation, and we will prove it!"
- MUU_reorganize:1 "Reorganize the Military"
- MUU_reorganize_desc:1 "For the past few years we have not been able to truly call our military 'modern'. This is intolerable."
- MUU_land_focus:1 "Land Focus"
- MUU_land_focus_desc:1 "Our Army is underfunded and underdeveloped."
- MUU_mobility:1 "Mobility Focus"
- MUU_mobility_desc:1 "An army without mobility is an army soon destroyed."
- MUU_firepower:1 "Firepower Focus"
- MUU_firepower_desc:1 "An army without arms is merely a mob."
- MUU_armor:1 "Armor Focus"
- MUU_armor_desc:1 "The Germans have proven that Armor is the new cavalry. We will not be left behind!"
- MUU_regular_forces:1 "Regular Forces"
- MUU_regular_forces_desc:1 "Organization is the key to success in all things, including the military."
- MUU_support_forces:1 "Support Forces"
- MUU_support_forces_desc:1 "To maintain our fighting forces we need to ensure they have everything they need on the battlefield."
- MUU_special_forces:1 "Special Forces"
- MUU_special_forces_desc:1 "Not all warfare happens in cities and plains. We must prepare some of our troops to specialize in these unique battlefields."
- MUU_airborne:1 "Paratroopers"
- MUU_airborne_desc:1 "To jump from a perfectly good plane does not seem like a good idea, but these troops can appear where least expected."
- MUU_marines:1 "Marines"
- MUU_marines_desc:1 "Naval invasions, rivers, lakes, or any significant body of water won't stop these specially trained troops."
- MUU_sea_focus:1 "Sea Focus"
- MUU_sea_focus_desc:1 "Our Navy is underfunded and underdeveloped."
- MUU_littoral_focus:1 "Coastal Focus"
- MUU_littoral_focus_desc:1 "The Sea of Hadu is ours. We must ensure that it remains within our control."
- MUU_medium_hulls:1 "Medium Hulls"
- MUU_medium_hulls_desc:1 "As we expand our navy we should better prepare our ships for the more rigorous conditions of the Austral Ocean."
- MUU_support_focus:1 "Support Ships"
- MUU_support_focus_desc:1 "Every modern navy needs support ships; convoys, colliers, transports."
- MUU_large_hulls:1 "Large Hulls"
- MUU_large_hulls_desc:1 "The larger weapons require large hulls. We must provide these hulls for our expanding navy."
- MUU_super_large_hulls:1 "Super Large Hulls"
- MUU_super_large_hulls_desc:1 "Some of our scientists have proposed creating even larger hulls, allowing us the ability to create truly awesome ocean-going weapons of war."
- MUU_carrier_hulls:1 "Carrier Hulls"
- MUU_carrier_hulls_desc:1 "Floating airstrips are the next great idea that our scientists have had. But this will require immense hulls to pull off."
- MUU_air_focus:1 "Air Focus"
- MUU_air_focus_desc:1 "Our Air Force is underfunded and underdeveloped."
- MUU_rocketry:1 "Rocketry"
- MUU_rocketry_desc:1 "Urutilli Sageqi claimed 300 years ago that if man could climb high enough he could touch the sky. Airplanes proved him right, and now some are claiming that we can go even higher, even faster."
- MUU_jets:1 "Jet Engines"
- MUU_jets_desc:1 "Our scientists claim that they can control the flow of an explosion to make an airplane rocket across the sky. Perhaps this is an idea worth investigating."
- MUU_fighter_focus:1 "Fighter Focus"
- MUU_fighter_focus_desc:1 "Warfare in the skies is going to be crucial to the future of our nation, or so say our scientists and military men."
- MUU_light_fighter_focus:1 "Interceptor Focus"
- MUU_light_fighter_focus_desc:1 "Fast and nimble airplanes can catch enemy bombers before they deliver their deadly payloads."
- MUU_naval_air_focus:1 "Naval Air Focus"
- MUU_naval_air_focus_desc:1 "Specially trained pilots and designed aircraft will enable us to bring our air power to bear on the navies of other nations."
- MUU_heavy_fighter_focus:1 "Escort Fighter Focus"
- MUU_heavy_fighter_focus_desc:1 "Our bombers, while powerful, are also very vulnerable to enemy fighters. By creating long range fighters we can protect our bombers and their precious payloads."
- MUU_tac_focus:1 "Tactical Bomber Focus"
- MUU_tac_focus_desc:1 "Lighter, faster, and more accurate than other bombers, these tactical bombers can help bring us an edge on the battlefield."
- MUU_bomber_focus:1 "Bomber Focus"
- MUU_bomber_focus_desc:1 "These heavier, more sturdy bombers can drop large payloads of high explosives on strategic targets, weakening the enemy's infrastructure and manufacturing capabilities."
- MUU_ussr_economic_cooperation:1 "Mu-USSR Research Cooperative"
  
+ 
+ MUU_national_tragedy:1 "A National Tragedy!"
+ MUU_national_tragedy_desc:1 ""
+ MUU_emergency_meeting:1 "Emergency Meeting"
+ MUU_emergency_meeting_desc:1 ""
+ MUU_government_purges:1 "Government Purges"
+ MUU_government_purges_desc:1 ""
+ MUU_upper_reform:1 "Upper House Reforms"
+ MUU_upper_reform_desc:1 ""
+ MUU_lower_reform:1 "Lower House Reforms"
+ MUU_lower_reform_desc:1 ""
+ MUU_emergency_reform:1 "Emergency Reforms"
+ MUU_emergency_reform_desc:1 ""
+ MUU_scapegoats:1 "Scapegoats"
+ MUU_scapegoats_desc:1 ""
+ MUU_gov_pogrom:1 "Government Pogrom"
+ MUU_gov_pogrom_desc:1 ""
+ MUU_mil_pogrom:1 "Military Pogrom"
+ MUU_mil_pogrom_desc:1 ""
+ MUU_nationalize_1:1 "Nationalize Railroads"
+ MUU_nationalize_1_desc:1 ""
+ MUU_nationalize_2:1 "Nationalize Factories"
+ MUU_nationalize_2_desc:1 ""
+ MUU_nationalize_conscription:1 "Extend Conscription"
+ MUU_nationalize_conscription_desc:1 ""
+ MUU_impeach_ollun:1 "Impeach Ollun"
+ MUU_impeach_ollun_desc:1 ""
+ MUU_old_system:1 "The Old System"
+ MUU_old_system_desc:1 ""
+ MUU_power_ojjamun:1 "Power to the Ojjamun"
+ MUU_power_ojjamun_desc:1 ""
+ MUU_purge_fascists:1 "Purge the Fascist Faction"
+ MUU_purge_fascists_desc:1 ""
+ MUU_dismantle_militias:1 "Dismantle Fascist Militias"
+ MUU_dismantle_militias_desc:1 ""
+ MUU_civic_education:1 "Civic Education"
+ MUU_civic_education_desc:1 ""
+ MUU_general_education:1 "The Home of Knowledge"
+ MUU_general_education_desc:1 ""
+ MUU_defense_ministry:1 "Expand the Defense Ministry"
+ MUU_defense_ministry_desc:1 ""
+ MUU_persecute_democratic:1 "Persecute Democratic Politicians"
+ MUU_persecute_democratic_desc:1 ""
+ MUU_new_elite:1 "A New Elite"
+ MUU_new_elite_desc:1 ""
+ MUU_national_holidays:1 "National Holidays"
+ MUU_national_holidays_desc:1 ""
+ MUU_one_people:1 "One Muror People"
+ MUU_one_people_desc:1 ""
+ MUU_development_ministry:1 "Create the Ministry of Development"
+ MUU_development_ministry_desc:1 ""
+ MUU_nonaligned_mil1:1 ">placeholder for mil1<"
+ MUU_nonaligned_mil1_desc:1 ""
+ MUU_nonaligned_mil2:1 ">placeholder for mil2<"
+ MUU_nonaligned_mil2_desc:1 ""
+ MUU_nonaligned_milciv1:1 ">placeholder for milciv1<"
+ MUU_nonaligned_milciv1_desc:1 ""
+ MUU_nonaligned_milciv2:1 ">placeholder for milciv1<"
+ MUU_nonaligned_milciv2_desc:1 ""
+ MUU_nonaligned_civ1:1 ">placeholder for civ1<"
+ MUU_nonaligned_civ1_desc:1 ""
+ MUU_nonaligned_civ2:1 ">placeholder for civ1<"
+ MUU_nonaligned_civ2_desc:1 ""
+ MUU_nonaligned_final:1 "A Beacon of Light"
+ MUU_nonaligned_final_desc:1 ""
+ MUU_westernization:1 "Westernization"
+ MUU_westernization_desc:1 ""
+ MUU_voice_public:1 "Voice of the People"
+ MUU_voice_public_desc:1 ""
+ MUU_join_allies:1 "Taking a Stance"
+ MUU_join_allies_desc:1 ""
+ MUU_acquire_weapons:1 "Acquire Modern Weapons"
+ MUU_acquire_weapons_desc:1 ""
+ MUU_acquire_ships:1 "Buy Old Ships"
+ MUU_acquire_ships_desc:1 ""
+ MUU_invite_companies:1 "Invite Foreign Companies"
+ MUU_invite_companies_desc:1 ""
+ MUU_extend_voting:1 "Extend Voting Rights"
+ MUU_extend_voting_desc:1 ""
+ MUU_transport_infrastructure:1 "Expand the Transport Infrastructure"
+ MUU_transport_infrastructure_desc:1 ""
+ MUU_modernize_industry:1 "Modernize our Industry"
+ MUU_modernize_industry_desc:1 ""
+ MUU_expand_ports:1 "Expand the Ports"
+ MUU_expand_ports_desc:1 ""
+ MUU_expand_dockyards:1 "The Q'tir Dockyards"
+ MUU_expand_dockyards_desc:1 ""
+ MUU_economic_reforms:1 "Economic Reforms"
+ MUU_economic_reforms_desc:1 ""
+ MUU_rural_workforce:1 "Extend Conscription in the Countryside"
+ MUU_rural_workforce_desc:1 ""
+ MUU_soviet_aid:1 "Soviet Aid"
+ MUU_soviet_aid_desc:1 ""
+ MUU_fellow_socialists:1 "Our Fellow Socialists"
+ MUU_fellow_socialists_desc:1 ""
+ MUU_support_revolutions:1 "Help the Class Struggle Abroad"
+ MUU_support_revolutions_desc:1 ""
+ MUU_puppet_republics:1 "Guide the Weaker States"
+ MUU_puppet_republics_desc:1 ""
+ MUU_join_comintern:1 "Join the Comintern!"
+ MUU_join_comintern_desc:1 ""
+ MUU_expropriate_bourgeoisie:1 "Expropriate Bourgeoise Property"
+ MUU_expropriate_bourgeoisie_desc:1 ""
+ MUU_forced_collectivization:1 "Forced Collectivization"
+ MUU_forced_collectivization_desc:1 ""
+ MUU_develop_poor:1 "Develop the Poor Districts"
+ MUU_develop_poor_desc:1 ""
+ MUU_land_reclamation:1 "Drain the Marshes"
+ MUU_land_reclamation_desc:1 ""
+ MUU_reform_religion:1 "Reform the Old Religion"
+ MUU_reform_religion_desc:1 ""
+ MUU_persecute_religion:1 "No Room for Superstition"
+ MUU_persecute_religion_desc:1 ""
+ MUU_state_first:1 "State Above All"
+ MUU_state_first_desc:1 ""
+ MUU_fascist_conscription:1 "Compulsory Military Service"
+ MUU_fascist_conscription_desc:1 ""
+ MUU_expropriate_foreigners:1 "Expropriate Foreign Property"
+ MUU_expropriate_foreigners_desc:1 ""
+ MUU_convert_factories1:1 "Militarize the Economy"
+ MUU_convert_factories1_desc:1 ""
+ MUU_convert_factories2:1 "Convert Factories for the War"
+ MUU_convert_factories2_desc:1 ""
+ MUU_claim_muror:1 "The Rebel States"
+ MUU_claim_muror_desc:1 ""
+ MUU_conscript_muror:1 "Incorporate the Locals into the Army"
+ MUU_conscript_muror_desc:1 ""
+ MUU_declare_empire:1 "A Unified People"
+ MUU_declare_empire_desc:1 ""
+ MUU_claim_neighbours:1 "Strike the Invaders!"
+ MUU_claim_neighbours_desc:1 ""
+ MUU_existential_war:1 "An Existential War"
+ MUU_existential_war_desc:1 ""
+ MUU_claim_continent:1 "Cleanse the Homeland"
+ MUU_claim_continent_desc:1 ""
+ MUU_unified_empire:1 "The Great Empire of Mu"
+ MUU_unified_empire_desc:1 ""
+ 
+ MUU_connect_countryside:1 "Connect with the Countryside"
+ MUU_connect_countryside_desc:1 ""
+ MUU_rural_infrastructure:1 "Hadu-Omarka Railroad"
+ MUU_rural_infrastructure_desc:1 ""
+ MUU_rural_manpower:1 ">>>>>Extend Military Recruitment"
+ MUU_rural_manpower_desc:1 ""
+ MUU_no_talk:1 "No Talk with Communists"
+ MUU_no_talk_desc:1 ""
+ MUU_yes_talk:1 "Compromise with the Militias"
+ MUU_yes_talk_desc:1 ""
+ MUU_exterminate_communists:1 "Exterminate the Reds!"
+ MUU_exterminate_communists_desc:1 ""
+ MUU_suppress_communists:1 "Suppress the Militias"
+ MUU_suppress_communists_desc:1 ""
+ MUU_incorporate_communists:1 "Incorporate and Support Moderates"
+ MUU_incorporate_communists_desc:1 ""
+ MUU_embrace_communists:1 "Support the Revolution!"
+ MUU_embrace_communists_desc:1 ""
+ MUU_survey_militias:1 "Survey the Hot Spots"
+ MUU_survey_militias_desc:1 ""
+ MUU_strike_cells:1 "Strike the Communist Cells"
+ MUU_strike_cells_desc:1 ""
+ MUU_destroy_militia:1 "Destroy the Militias"
+ MUU_destroy_militia_desc:1 ""
+ MUU_limit_influence:1 "Limit their Influence"
+ MUU_limit_influence_desc:1 ""
+ MUU_bribe_politicians:1 "Bribe the Politicians"
+ MUU_bribe_politicians_desc:1 ""
+ MUU_deradicalize_youth:1 "Deradicalize the Youth"
+ MUU_deradicalize_youth_desc:1 ""
+ MUU_absorb_militias:1 "Absorb the Militias"
+ MUU_absorb_militias_desc:1 ""
+ MUU_expand_influence:1 "Expand the Influence"
+ MUU_expand_influence_desc:1 ""
+ MUU_control_cities:1 "Establish Presence on the Old Cities"
+ MUU_control_cities_desc:1 ""
+ MUU_rural_schools:1 "Rural Schools"
+ MUU_rural_schools_desc:1 ""
+ 
+ MUU_military_reforms:1 "Military Reforms"
+ MUU_military_reforms_desc:1 ""
+ MUU_infantry_equip:1 "Modernized Rifles"
+ MUU_infantry_equip_desc:1 ""
+ MUU_artillery_equip:1 "Fire Support"
+ MUU_artillery_equip_desc:1 ""
+ MUU_doctrine_research1:1 "Adaptive Tactics"
+ MUU_doctrine_research1_desc:1 ""
+ MUU_motorized_equip:1 "Mobile Warfare"
+ MUU_motorized_equip_desc:1 ""
+ MUU_tank_equip:1 "Heavy Armor"
+ MUU_tank_equip_desc:1 ""
+ MUU_special_forces:1 "Namumaz Qul"
+ MUU_special_forces_desc:1 ""
+ MUU_infantry_marsh:1 "Detachable Floaters"
+ MUU_infantry_marsh_desc:1 ""
+ MUU_motorized_marsh:1 "Watertight Seals"
+ MUU_motorized_marsh_desc:1 ""
+ MUU_tank_marsh:1 "River Fording"
+ MUU_tank_marsh_desc:1 ""
+ MUU_dd_focus:1 "Protect the Trade"
+ MUU_dd_focus_desc:1 ""
+ MUU_cl_focus:1 "Coastal Guard"
+ MUU_cl_focus_desc:1 ""
+ MUU_sub_focus:1 "Sink the Invaders"
+ MUU_sub_focus_desc:1 ""
+ MUU_ca_focus:1 "Heavy Ships"
+ MUU_ca_focus_desc:1 ""
+ MUU_bb_focus:1 "The Pride of the Fleet"
+ MUU_bb_focus_desc:1 ""
+ MUU_cv_focus:1 "Floating Airfields"
+ MUU_cv_focus_desc:1 ""
+ MUU_light_fighter:1 "Homeland Defense"
+ MUU_light_fighter_desc:1 ""
+ MUU_cas:1 "Ground Pounding"
+ MUU_cas_desc:1 ""
+ MUU_nav_bomber:1 "Defense of Hadu"
+ MUU_nav_bomber_desc:1 ""
+ MUU_heavy_fighter:1 "Escort Fighters"
+ MUU_heavy_fighter_desc:1 ""
+ MUU_tac_bomber:1 "Long-Range Support"
+ MUU_tac_bomber_desc:1 ""
+ MUU_strat_bomber:1 "Aparuqur Ijuaz"
+ MUU_strat_bomber_desc:1 ""
+ MUU_experimental_airfield:1 "The Inirliq Experimental Airfield"
+ MUU_experimental_airfield_desc:1 ""
+ MUU_expand_airfield:1 "Expand the Operations"
+ MUU_expand_airfield_desc:1 ""
+ MUU_jet_research:1 "Jet Propulsion Research"
+ MUU_jet_research_desc:1 ""
