--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -976,3 +976,6 @@
  VICTORY_POINTS_13987:0 "Campo Santo"
  VICTORY_POINTS_13998:0 "Tierra Peligrosa"
  VICTORY_POINTS_13958:0 "Tuugamau O Lafu"
+ VICTORY_POINTS_13953:0 "Laautalatala"
+ VICTORY_POINTS_13947:0 "Leai Ni Laau"
+ VICTORY_POINTS_13928:0 "Tafolāfaga"
