victory points additions

--- a/localisation/parties_l_english.yml
+++ b/localisation/parties_l_english.yml
@@ -541,9 +541,8 @@
  YUN_communism_party_long:0 "Communist Party of China"
  MAN_fascism_party:0 "MX"
  MAN_fascism_party_long:0 "Manzhōuguó Xiéhehuì"
-
  MUU_fascism_party:0 "Mu Virinji Partizi"
- MUU_communism_party:0 "Mu'nun Qomiunist Partizi"
+ MUU_communism_party:0 "Munu Qomiunist Partizi"
  MUU_democratic_party:0 "Temoqrazi Partizi"
  MUU_neutrality_party:0 "Qenti Itale Partizi"
  FSM_neutrality_party:0 "Selbstverwaltung Partei"
