--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -979,3 +979,4 @@
  VICTORY_POINTS_13953:0 "Laautalatala"
  VICTORY_POINTS_13947:0 "Leai Ni Laau"
  VICTORY_POINTS_13928:0 "Tafolāfaga"
+ VICTORY_POINTS_13498:0 "Tafolāfaga"
