Victory Point changes, name changes, adding province of Nuyu

--- a/localisation/strategic_region_names_l_english.yml
+++ b/localisation/strategic_region_names_l_english.yml
@@ -215,7 +215,7 @@
  STRATEGICREGION_215:0 "Todorovia"
  STRATEGICREGION_216:0 "Tahiti"
  STRATEGICREGION_217:0 "Tiquean Coast"
- STRATEGICREGION_218:0 "Uale Island"
+ STRATEGICREGION_218:0 "Walen Island"
  STRATEGICREGION_219:0 "Lauwili Shore"
  STRATEGICREGION_220:0 "Ika"
  STRATEGICREGION_221:0 "The Mouth"
