--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -435,7 +435,7 @@
  VICTORY_POINTS_5107:0 "Fortaleza"
  VICTORY_POINTS_5168:0 "Récife"
  VICTORY_POINTS_10447:0 "Porto Alegre"
- VICTORY_POINTS_10513:0 "Sao Paulo"
+ VICTORY_POINTS_10513:0 "São Paulo"
  VICTORY_POINTS_10946:0 "São Salvador"
  VICTORY_POINTS_12853:0 "Belém"
  VICTORY_POINTS_10362:0 "Montevideo"
@@ -906,13 +906,13 @@
  VICTORY_POINTS_13431:0 "Kororāreka"
  VICTORY_POINTS_13432:0 "Wainuiomu"
  VICTORY_POINTS_13966:0 "'Aifa'arua'i"
- VICTORY_POINTS_13835:0 "Muguruq"
+ VICTORY_POINTS_13835:0 "Muguruaq"
  VICTORY_POINTS_5254:0 "Königshafen"
  VICTORY_POINTS_2478:0 "Neu Dresden"
  VICTORY_POINTS_2794:0 "Bösestadt"
  VICTORY_POINTS_2890:0 "Rodrigo Díaz de Vivar"
  VICTORY_POINTS_2987:0 "Gosíngol"
- VICTORY_POINTS_14121:0 "Poughinho"
+ VICTORY_POINTS_14121:0 "Poguinho"
  VICTORY_POINTS_14009:0 "Grasport"
  VICTORY_POINTS_13733:0 "Lionelville"
  VICTORY_POINTS_13732:0 "Solstice Harbour"
@@ -922,7 +922,7 @@
  VICTORY_POINTS_13357:0 "Victoria"
  VICTORY_POINTS_13657:0 "Geqijji"
  VICTORY_POINTS_13608:0 "Von Isignystadt"
- VICTORY_POINTS_13595:0 "Nynekso"
+ VICTORY_POINTS_13595:0 "Germaniahafen"
  VICTORY_POINTS_14084:0 "Oranjehaven"
  VICTORY_POINTS_14046:0 "Salchicha"
  VICTORY_POINTS_13975:0 "Ciudad de Todorov"
@@ -939,18 +939,18 @@
  VICTORY_POINTS_13905:0 "Nofoaga Agava'a"
  VICTORY_POINTS_13907:0 "Va'ava'ai Mata"
  VICTORY_POINTS_13515:0 "Moli Feagai"
- VICTORY_POINTS_13412:0 "Whenuaomaui"
- VICTORY_POINTS_13284:0 "Savaiki"
+ VICTORY_POINTS_13412:0 "Loto Aai"
+ VICTORY_POINTS_13284:0 "Fa'ai'uga"
  VICTORY_POINTS_13282:0 "Port Dewey"
  VICTORY_POINTS_13899:0 "Port Laurel"
  VICTORY_POINTS_13898:0 "King's Thumb"
- VICTORY_POINTS_13766:0 "Q'tir"
- VICTORY_POINTS_13756:0 "Qna'a"
- VICTORY_POINTS_13868:0 "Labn"
- VICTORY_POINTS_13822:0 "Asetale"
- VICTORY_POINTS_13821:0 "Virqq"
- VICTORY_POINTS_13808:0 "Neji"
- VICTORY_POINTS_13622:0 "Navganara"
+ VICTORY_POINTS_13766:0 "Qeraqama"
+ VICTORY_POINTS_13756:0 "Yimvate"
+ VICTORY_POINTS_13868:0 "Zuqurmpoqja"
+ VICTORY_POINTS_13822:0 "Behavate"
+ VICTORY_POINTS_13821:0 "Gusgutu"
+ VICTORY_POINTS_13808:0 "Guagoi"
+ VICTORY_POINTS_13622:0 "Navheza"
  VICTORY_POINTS_13428:0 "Mauga O Molimau"
  VICTORY_POINTS_13476:0 "Aai O Le Togavao"
  VICTORY_POINTS_14019:0 "Sable Blanc"
@@ -962,7 +962,7 @@
  VICTORY_POINTS_14033:0 "Cruz de San Andrés"
  VICTORY_POINTS_14054:0 "Jallivizen"
  VICTORY_POINTS_14066:0 "Arquvon"
- VICTORY_POINTS_14141:0 "Jijil"
+ VICTORY_POINTS_14141:0 "Santa Florentina"
  VICTORY_POINTS_14146:0 "San Pedro"
  VICTORY_POINTS_2405:0 "Arena de Oro"
  VICTORY_POINTS_8664:0 "Edwardsberg"
@@ -979,4 +979,32 @@
  VICTORY_POINTS_13953:0 "Laautalatala"
  VICTORY_POINTS_13947:0 "Leai Ni Laau"
  VICTORY_POINTS_13928:0 "Tafolāfaga"
- VICTORY_POINTS_13498:0 "Tafolāfaga"
+ VICTORY_POINTS_13498:0 "Lanu Omea"
+ VICTORY_POINTS_13514:0 "Uafu O Manua"
+ VICTORY_POINTS_13528:0 "Tolu Laau"
+ VICTORY_POINTS_13538:0 "Alale'a Tagi"
+ VICTORY_POINTS_13538:0 "Timuga"
+ VICTORY_POINTS_13567:0 "Mafuie"
+ VICTORY_POINTS_13574:0 "Miriamsville"
+ VICTORY_POINTS_13903:0 "Faavavau"
+ VICTORY_POINTS_13756:0 "Yimvate"
+ VICTORY_POINTS_13773:0 "Imriwidi"
+ VICTORY_POINTS_13796:0 "Imiju"
+ VICTORY_POINTS_13702:0 "Joramlabnaj"
+ VICTORY_POINTS_13665:0 "Radaleg"
+ VICTORY_POINTS_13647:0 "Teqmufuz"
+ VICTORY_POINTS_13407:0 "Vaalele Malolo"
+ VICTORY_POINTS_13384:0 "Inuhumuku"
+ VICTORY_POINTS_13364:0 "Faanoanoa"
+ VICTORY_POINTS_13274:0 "Vavae Ese"
+ VICTORY_POINTS_13281:0 "Ofoofogia"
+ VICTORY_POINTS_13305:0 "Lanumeamata"
+ VICTORY_POINTS_13486:0 "Zalā Osta"
+ VICTORY_POINTS_14111:0 "São Vicente"
+ VICTORY_POINTS_14099:0 "Touro Preto"
+ VICTORY_POINTS_14091:0 "Solquente"
+ VICTORY_POINTS_2724:0 "Winterbucht"
+ VICTORY_POINTS_14062:0 "Duhuaz"
+ VICTORY_POINTS_13853:0 "Debojechet"
+ VICTORY_POINTS_13636:0 "Duneyig"
+ VICTORY_POINTS_13618:0 "Tegzusuqu"
