--- a/localisation/loading_tips_l_english.yml
+++ b/localisation/loading_tips_l_english.yml
@@ -92,3 +92,4 @@
  LOADING_TIP_90:0 ""You can live your life as a coward, or you die as a hero!"\n - General Dajjar Zohok addressing his troops a moment before an enemy bullet killed him."
  LOADING_TIP_91:0 ""One dishonor heaped upon another. The heavenly mandate has departed and left us desolate."\n - Yang Xinyi Luo addressing the Zhenzhuren Parliament before committing suicide."
  LOADING_TIP_91:0 ""I know my rights, namely that I have none, and therefore nothing to lose."\n - Sumukivi Aepa’ato"
+ LOADING_TIP_92:0 ""Praise the Lord and pass the ammunition!"\n - Chaplain Forgy, USS New Orleans"
