Fascist geq tree
most of the fascist geq tree is here

--- a/localisation/events_l_english.yml
+++ b/localisation/events_l_english.yml
@@ -3239,6 +3239,16 @@
  geq.16.d:0 "A foreign nation is attacking Wrightsylvania, they are a Commonwealth nation and thus have cultural and economic ties, should we invite them to our faction?"
  geq.16.a:0 "We must defend the Commonwealth"
  geq.16.b:0 "Better not risk a war across the world"
+ geq.17.t:0 "Geq Offers us a Treaty"
+ geq.17.d:0 "The nation of Geq offers us a treaty in which we give them some of our naval technology, and they give us training for fighting in terrain."
+ geq.17.a:0 "Of course we must accept"
+ geq.17.b:0 "Japanese naval technology is only for the Japanese"
+ geq.18.t:0 "Japan Accepts!"
+ geq.18.d:0 "Japan has accepted our treaty."
+ geq.18.a:0 "Geq high seas fleet here we come!"
+ geq.19.t:0 "Japan Declines!"
+ geq.19.d:0 "Japan has declined our treaty."
+ geq.19.a:0 "Geq will forever remain land locked."
 
  fsm.1.t:0 "Liberale Koalition Wins Elections"
  fsm.1.d:0 "The 1936 election in the FSM have concluded with a suprising victory at the hands of the Liberale Koalition. A progressive group, the LK party has only gained traction within recent years, but it seems to have been enough to garner them a slim majority of the votes. The party is already promising to undertake major reforms of the nation, in hopes of revitalizing the economy, mending the nation's poor diplomatic relations, and creating a more democratic and egalitarian state."
