--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -2527,6 +2527,16 @@
  GEQ_newly_formed_state_desc:0 "We are a newly formed state, and we need to address our internal issues before looking outward."
  GEQ_prepare_to_retake_the_southe:0 "Prepare to Retake The South"
  GEQ_prepare_to_retake_the_southe_desc:0 "We must ready our armies for an invasion of our southern lands!"
+ GEQ_embrace_geqian_militarism:0 "Embrace Geqian Militarism"
+ GEQ_embrace_geqian_militarism_desc:0 ""
+ GEQ_support_the_nuclear_family:0 "Support the Middle Class"
+ GEQ_support_the_nuclear_family_desc:0 "We are investing subsidies in the middle class, which is allowing more people to have more children."
+ GEQ_ditch_science:0 "Ditch Science"
+ GEQ_ditch_science_desc:0 "We have decided to not support any sort of sciences, instead we support industrial development."
+ GEQ_geq_bonus:0 "Geqian Army Standards"
+ GEQ_geq_bonus_desc:0 "The Geqian people live in an enviorment with many different terrains, this has allowed them to endure in the toughest of situations."
+ GEQ_jap_bonus:0 "Japanese Naval Aid"
+ GEQ_jap_bonus_desc:0 "We have gotten Japanese naval production, and development aid."
 
 FSM_unfair_sufferage:0 "Unfair Suffrage"
 FSM_associate_state:0 "The Associate State"
