--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -940,7 +940,7 @@
  VICTORY_POINTS_13907:0 "Va'ava'ai Mata"
  VICTORY_POINTS_13515:0 "Moli Feagai"
  VICTORY_POINTS_13412:0 "Loto Aai"
- VICTORY_POINTS_13284:0 "Fa'ai'uga"
+ VICTORY_POINTS_13284:0 "Savaiki"
  VICTORY_POINTS_13282:0 "Port Dewey"
  VICTORY_POINTS_13899:0 "Port Laurel"
  VICTORY_POINTS_13898:0 "King's Thumb"
