--- a/localisation/focus_l_english.yml
+++ b/localisation/focus_l_english.yml
@@ -2310,14 +2310,29 @@
  FSM_kaiser_is_back_desc:1 "With the illegitimate regime gone, the Kaiser has taken his rightful place on the throne of Germany! Now that the fatherland is no longer under the iron hand of the fascists, perhaps our ties can grow stronger again."
  FSM_status_quo:1 "Status Quo"
  FSM_status_quo_desc:1 "Change attracts instability. Why crumble under the wave of modern discourse, when we already have all we need?"
- FSM_revoke_sanctions:1 "Revoke Sanctions"
- FSM_revoke_sanctions_desc:1 "The Versailles Treaty imposed a number of unfair sanctions on us. While our workers toil away, the French and British reap our profit. No Freistaater should bear to live like this; the time has come to stand up for ourselves and deny the imperialist powers their oppressive demands."
+ FSM_revoke_sanction:1 "Revoke The Sanctions"
+ FSM_revoke_sanction_desc:1 "The Versailles Treaty imposed a number of unfair sanctions on us. While our workers toil away, the French and British reap our profit. No Freistaater should bear to live like this; the time has come to stand up for ourselves and deny the imperialist powers their oppressive demands."
  FSM_reinstate_the_associate_state:1 "Restore the Associate State"
  FSM_reinstate_the_associate_state_desc:1 "The Associate State represented a golden era for the german people. Our economy prospered under the Kaiserreich, and offered us mutual military support. But it is not too late to reinstate the Associate State, and once again reunite with our european brethren."
  FSM_encourage_fascists:1 "Encourage Fascism"
  FSM_encourage_fascists_desc:1 "Fascism seems to have brought Germany strength and unity; perhaps it will work for us too. Many officials in the government have sympathies to Hitler's regime; we should hear them out."
  FSM_snap_elections:1 "Snap Elections"
  FSM_snap_elections_desc:1 "The support for the ZNSP has reached a critical high. The people's demands have been made clear. We should organize a snap election to hear the populace out; lest we risk a revolt."
+ FSM_claims_on_tiquea:1 "Claims on Tiquea"
+ FSM_claims_on_tiquea_desc:1 "__placeholder____"
+ FSM_brotherhood:1 "Brotherhood"
+ FSM_brotherhood_desc:1 "__placeholder____"
+ FSM_sieze_fjinland:1 "Seize Fjinland"
+ FSM_sieze_fjinland_desc:1 "__placeholder____"
+ FSM_ban_japanese_immigration:1 "Ban Japanese Immigration"
+ FSM_ban_japanese_immigration_desc:1 "__placeholder____"
+ FSM_join_allies:1 "Join Allies"
+ FSM_join_allies_desc:1 "__placeholder____"
+
+
+
+
+
  TOD_start:1 "Organize the Government"
  TOD_start_desc:1 "Before we make any moves on the world stage we must ensure that we have prepared our government for the challenges ahead."
  TOD_cooperation:1 "Good Neighbors"
