MAP update - still needs work!

--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -812,7 +812,7 @@
  STATE_811:0 "Anaga'a"
  STATE_812:0 "Line'e"
  STATE_813:0 "Agamai"
- STATE_814:0 "Savaiki"
+ STATE_814:0 "Hourangiatea"
  STATE_815:0 "Iwikia"
  STATE_816:0 "Eoatu"
  STATE_817:0 "Matue"
