--- a/localisation/state_names_l_english.yml
+++ b/localisation/state_names_l_english.yml
@@ -845,7 +845,7 @@
  STATE_844:0 "Hukilau"
  STATE_845:0 "Toto"
  STATE_846:0 "Ina'i"
- STATE_847:0 "Oi'oi"
+ STATE_847:0 "Uafu O Manua"
  STATE_848:0 "Fai'aopoipo"
  STATE_849:0 "Uku"
  STATE_850:0 "Oaoa"
@@ -857,9 +857,9 @@
  STATE_856:0 "Navganara"
  STATE_857:0 "Navdrmu"
  STATE_858:0 "Navjijeq"
- STATE_859:0 "Hatmaq"
+ STATE_859:0 "Teqmufuz"
  STATE_860:0 "Geq"
- STATE_861:0 "Duqun"
+ STATE_861:0 "Radaleg"
  STATE_862:0 "Unjarqi"
  STATE_863:0 "Jijeq"
  STATE_864:0 "Mauruuru"
@@ -869,29 +869,29 @@
  STATE_868:0 "Ridleysland"
  STATE_869:0 "Waponi Island"
  STATE_870:0 "Ogish"
- STATE_871:0 "Qna'a"
+ STATE_871:0 "Yimvate"
  STATE_872:0 "Drmu"
- STATE_873:0 "Q'tir"
- STATE_874:0 "Inirliq"
+ STATE_873:0 "Qeraqama"
+ STATE_874:0 "Imriwidi"
  STATE_875:0 "Mirida"
- STATE_876:0 "Girgu"
- STATE_877:0 "Neji"
- STATE_878:0 "Virqq"
- STATE_879:0 "Asetale"
+ STATE_876:0 "Imiju"
+ STATE_877:0 "Guagoi"
+ STATE_878:0 "Gusgutu"
+ STATE_879:0 "Behavate"
  STATE_880:0 "Vatpagchi"
  STATE_881:0 "Atulsan"
  STATE_882:0 "Dustartajare"
  STATE_883:0 "Teqsitlti"
  STATE_884:0 "Tollang"
  STATE_885:0 "Yollohtli"
- STATE_886:0 "Zochtli"
+ STATE_886:0 "Debojechet"
  STATE_887:0 "Tesi"
- STATE_888:0 "Labn"
+ STATE_888:0 "Zuqurmpoqja"
  STATE_889:0 "King's Thumb"
  STATE_890:0 "Port Laurel"
- STATE_891:0 "Manka"
- STATE_892:0 "Awa"
- STATE_893:0 "Kaniwha"
+ STATE_891:0 "Faavavau"
+ STATE_892:0 "Kaniwha"
+ STATE_893:0 "Awa"
  STATE_894:0 "Vaitafe Matagofie"
  STATE_895:0 "Hou'avae"
  STATE_896:0 "Pugepa"
