--- a/localisation/victory_points_l_english.yml
+++ b/localisation/victory_points_l_english.yml
@@ -906,7 +906,7 @@
  VICTORY_POINTS_13431:0 "Kororāreka"
  VICTORY_POINTS_13432:0 "Wainuiomu"
  VICTORY_POINTS_13966:0 "'Aifa'arua'i"
- VICTORY_POINTS_13835:0 "Muguruaq"
+ VICTORY_POINTS_13835:0 "Muguraq"
  VICTORY_POINTS_5254:0 "Königshafen"
  VICTORY_POINTS_2478:0 "Neu Dresden"
  VICTORY_POINTS_2794:0 "Bösestadt"
@@ -937,19 +937,19 @@
  VICTORY_POINTS_8787:0 "Blaueswasser"
  VICTORY_POINTS_13837:0 "Vatpagchi Saeli"
  VICTORY_POINTS_13905:0 "Nofoaga Agava'a"
- VICTORY_POINTS_13907:0 "Va'ava'ai Mata"
+ VICTORY_POINTS_13907:0 "Awa"
  VICTORY_POINTS_13515:0 "Moli Feagai"
  VICTORY_POINTS_13412:0 "Loto Aai"
  VICTORY_POINTS_13284:0 "Savaiki"
  VICTORY_POINTS_13282:0 "Port Dewey"
  VICTORY_POINTS_13899:0 "Port Laurel"
  VICTORY_POINTS_13898:0 "King's Thumb"
- VICTORY_POINTS_13766:0 "Qeraqama"
- VICTORY_POINTS_13756:0 "Yimvate"
- VICTORY_POINTS_13868:0 "Zuqurmpoqja"
- VICTORY_POINTS_13822:0 "Behavate"
- VICTORY_POINTS_13821:0 "Gusgutu"
- VICTORY_POINTS_13808:0 "Guagoi"
+ VICTORY_POINTS_13766:0 "Q'tir"
+ VICTORY_POINTS_13756:0 "Qna'a"
+ VICTORY_POINTS_13868:0 "Labn"
+ VICTORY_POINTS_13822:0 "Asetale"
+ VICTORY_POINTS_13821:0 "Virqq"
+ VICTORY_POINTS_13808:0 "Neji"
  VICTORY_POINTS_13622:0 "Navheza"
  VICTORY_POINTS_13428:0 "Mauga O Molimau"
  VICTORY_POINTS_13476:0 "Aai O Le Togavao"
@@ -979,19 +979,19 @@
  VICTORY_POINTS_13947:0 "Leai Ni Laau"
  VICTORY_POINTS_13928:0 "Tafolāfaga"
  VICTORY_POINTS_13498:0 "Lanu Omea"
- VICTORY_POINTS_13514:0 "Uafu O Manua"
+ VICTORY_POINTS_13514:0 "Oi'oi"
  VICTORY_POINTS_13528:0 "Tolu Laau"
  VICTORY_POINTS_13538:0 "Alale'a Tagi"
  VICTORY_POINTS_13538:0 "Timuga"
  VICTORY_POINTS_13567:0 "Mafuie"
  VICTORY_POINTS_13574:0 "Miriamsville"
- VICTORY_POINTS_13903:0 "Faavavau"
+ VICTORY_POINTS_13903:0 "Manka"
  VICTORY_POINTS_13756:0 "Yimvate"
- VICTORY_POINTS_13773:0 "Imriwidi"
- VICTORY_POINTS_13796:0 "Imiju"
+ VICTORY_POINTS_13773:0 "Inirliq"
+ VICTORY_POINTS_13796:0 "Girgu"
  VICTORY_POINTS_13702:0 "Joramlabnaj"
- VICTORY_POINTS_13665:0 "Radaleg"
- VICTORY_POINTS_13647:0 "Teqmufuz"
+ VICTORY_POINTS_13665:0 "Duqun"
+ VICTORY_POINTS_13647:0 "Hatmaq"
  VICTORY_POINTS_13407:0 "Vaalele Malolo"
  VICTORY_POINTS_13384:0 "Inuhumuku"
  VICTORY_POINTS_13364:0 "Faanoanoa"
@@ -1004,6 +1004,6 @@
  VICTORY_POINTS_14091:0 "Solquente"
  VICTORY_POINTS_2724:0 "Winterbucht"
  VICTORY_POINTS_14062:0 "Duhuaz"
- VICTORY_POINTS_13853:0 "Debojechet"
+ VICTORY_POINTS_13853:0 "Zochtli"
  VICTORY_POINTS_13636:0 "Duneyig"
  VICTORY_POINTS_13618:0 "Tegzusuqu"
