Mu Focus Localizations

--- a/localisation/aml_focus_l_english.yml
+++ b/localisation/aml_focus_l_english.yml
@@ -169,35 +169,35 @@
  
  
  MUU_national_tragedy:1 "A National Tragedy!"
- MUU_national_tragedy_desc:1 ""
+ MUU_national_tragedy_desc:1 "The symbol of Mu's prosperity has turned to our harm! When the dam was finished it began to flood the province of Mauruuru in Geq damaging homesand property. When our engineers tried to drop the water level too fast it ended up overwhelming the safety systems we had installed and the dam ruptured. The ensuing wall of water killed tens of thousands in Neji and destroyed many industrial centers."
  MUU_emergency_meeting:1 "Emergency Meeting"
- MUU_emergency_meeting_desc:1 ""
+ MUU_emergency_meeting_desc:1 "To mitigate the worst of this disaster we must call an emergency meeting of all government officials. This will help us to plan an adequate response, and hopefully will show the public that we are in control of the situation."
  MUU_government_purges:1 "Government Purges"
- MUU_government_purges_desc:1 ""
- MUU_upper_reform:1 "Upper House Reforms"
- MUU_upper_reform_desc:1 ""
- MUU_lower_reform:1 "Lower House Reforms"
- MUU_lower_reform_desc:1 ""
+ MUU_government_purges_desc:1 "The public is rightfully upset by the horrendous death toll from the dam's failure. We must show that we are responding to the situation in order to keep the public's anger at bay."
+ MUU_upper_reform:1 "Upper Chamber Reforms"
+ MUU_upper_reform_desc:1 "Our emergency meeting has shown us that we must begin the arduous process of restructuring our government to be more responsive to situations like this and to prevent any disasters in the future."
+ MUU_lower_reform:1 "Lower Chamber Reforms"
+ MUU_lower_reform_desc:1 "'The reforms have been difficult so far but have begun to bear fruit. We know that further change is necessary and we believe that it will serve us and our nation well. Where we go from here will depend on the will of the people."
  MUU_emergency_reform:1 "Emergency Reforms"
- MUU_emergency_reform_desc:1 ""
+ MUU_emergency_reform_desc:1 "'We cannot wait for methodical change in government; we must act now! By pushing through emergency reforms we can demonstrate to the public that we are serious about protecting them.' - Lladut Hushharem of House Gusqurat"
  MUU_scapegoats:1 "Scapegoats"
- MUU_scapegoats_desc:1 ""
+ MUU_scapegoats_desc:1 "'A few well placed scapegoats, publicly tried and convicted of gross negligence, will sate the wrath of the people.' - Udizopa Dahamaz of House Qangazda"
  MUU_gov_pogrom:1 "Government Pogrom"
- MUU_gov_pogrom_desc:1 ""
+ MUU_gov_pogrom_desc:1 "'The fury of the people will consume us! If we are unable to provide a sufficient number of people to blame for this tragedy it will lead to civil unrest.' - Nyazuq Visja of House Rujjidu"
  MUU_mil_pogrom:1 "Military Pogrom"
- MUU_mil_pogrom_desc:1 ""
+ MUU_mil_pogrom_desc:1 "'The military played a significant role in the construction of the ill-fated dam, so they too should share some of the blame!' - Uqun Bostru of House Gahrijjeom"
  MUU_nationalize_1:1 "Nationalize Railroads"
- MUU_nationalize_1_desc:1 ""
+ MUU_nationalize_1_desc:1 "'The situation is not all bad. Firing a number of troublemakers in government and a handful of overly self-righteous military men can leave the nation in a much better position. Another option is to shift some of the blame onto the privately owned companies that were hired for the construction of the dam. We can seize their assets as 'payment' for their part in this tragedy.' Gazuq Herimsa of House Llanstiq"
  MUU_nationalize_2:1 "Nationalize Factories"
- MUU_nationalize_2_desc:1 ""
+ MUU_nationalize_2_desc:1 "Each factory that provided, or is suspected to have provided, faulty material for the construction of Qibeha Dam is hereby seized by the government as payment for their part in the national tragedy that ensued. -Qibeha Dam Recovery Bill, section 1, paragraph 3. "
  MUU_nationalize_conscription:1 "Extend Conscription"
- MUU_nationalize_conscription_desc:1 ""
+ MUU_nationalize_conscription_desc:1 "Some of the seizures of property from private interests has caused increased unrest among part of the populace. We must strengthen our renewed military with recruits."
  MUU_impeach_ollun:1 "Impeach Ollun"
- MUU_impeach_ollun_desc:1 ""
+ MUU_impeach_ollun_desc:1 "'The Upper and Lower Chambers have spoken. He brought this terrible ruin on our nation through his folly! Ollun must go!' - Aztaj Darjetaq of House Oqzur "
  MUU_old_system:1 "The Old System"
- MUU_old_system_desc:1 ""
+ MUU_old_system_desc:1 "'Ujjamun Nalangqu, our thrice blessed leader, has celebrated his 70th turn around Hu. He was pressured by House Gahrijjeom to bring in ideas from the vaunted Western Powers. While some have benefitted us much of the rest has been harmful or wasteful. Perhaps if he had more control again in the ruling of our great nation he could fix some of these problems.' - Dashutun Gusallu of House Vedzagra"
  MUU_power_ojjamun:1 "Power to the Ojjamun"
- MUU_power_ojjamun_desc:1 ""
+ MUU_power_ojjamun_desc:1 "'The people have spoken and we agree with them. We must return to the days of glory when the Ujjamun ruled from the Qiedil Throne!' - Nurq Tapanggu of House Owastim "
  MUU_purge_fascists:1 "Purge the Fascist Faction"
  MUU_purge_fascists_desc:1 ""
  MUU_dismantle_militias:1 "Dismantle Fascist Militias"
